<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:padding="20dp">

    <ImageView
        android:id="@+id/App_Logo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.322"
        app:srcCompat="@mipmap/ic_logo_foreground" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorHomeMenu"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.825">

        <TextView
            android:id="@+id/graph_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/colorHomeList"
            android:padding="5dp"
            android:text="@string/homepage_graph"
            android:textAlignment="center"
            android:textColor="@color/colorHomeListText"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/quiz_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/colorHomeList"
            android:padding="5dp"
            android:text="@string/homepage_quiz"
            android:textAlignment="center"
            android:textColor="@color/colorHomeListText"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/settings_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/colorHomeList"
            android:padding="5dp"
            android:text="@string/homepage_settings"
            android:textAlignment="center"
            android:textColor="@color/colorHomeListText"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/other_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/colorHomeList"
            android:padding="5dp"
            android:text="@string/homepage_other"
            android:textAlignment="center"
            android:textColor="@color/colorHomeListText"
            android:textSize="25dp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
