<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clSettingPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <Switch
        android:id="@+id/switch1"
        android:layout_width="291dp"
        android:layout_height="42dp"
        android:layout_marginTop="14dp"
        android:text="@string/settings_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorSwitchText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@color/colorTextView"
        android:gravity="center"
        android:text="@string/settings_aboutus"
        android:textColor="@color/colorTextViewText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="156dp"
        android:background="@color/colorTextView"
        android:gravity="center"
        android:text="@string/settings_share"
        android:textColor="@color/colorTextViewText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.804" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="93dp"
        android:layout_height="90dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/adi" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="114dp"
        android:layout_height="51dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="8dp"
        android:gravity="center|top"
        android:text="@string/settings_adi"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/colorSettingText"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="93dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/amit" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="88dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="86dp"
        android:gravity="center|top"
        android:text="@string/settings_amit"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/colorSettingText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="93dp"
        android:layout_height="90dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/anu" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="116dp"
        android:layout_height="61dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="8dp"
        android:gravity="center|top"
        android:text="@string/settings_anand"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/colorSettingText"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="93dp"
        android:layout_height="90dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/sow" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="116dp"
        android:layout_height="61dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:gravity="center|top"
        android:text="@string/settings_sowmya"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/colorSettingText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <ImageView
        android:id="@+id/ivHistainaibilityLogo"
        android:layout_width="131dp"
        android:layout_height="139dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo_png" />

    <ImageButton
        android:id="@+id/ibShareButtonApp"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="212dp"
        android:background="@color/colorSettingShareButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_share"
        app:tint="@color/colorSettingShareTint" />

    <ImageView
        android:id="@+id/ivIITTLogo"
        android:layout_width="144dp"
        android:layout_height="163dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivHistainaibilityLogo"
        app:srcCompat="@drawable/iitt_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>